@@ -1,3 +1,12 @@
+2011-02-22  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by James Robinson.
+
+        nrwt: --platform chromium-gpu doesn't work with --worker-model=processes
+        https://bugs.webkit.org/show_bug.cgi?id=55009
+
+        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:
+
 2011-02-18  Mihai Parparita  <mihaip@chromium.org>
 
         Reviewed by Ojan Vafai.
